# FrameBook

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md  fbApi.cpp  fbApi.h  framebook-applet.desktop  framebook.cpp  framebook.h  framebookSettings.cpp  framebookSettings.h  framebookconfig.cpp  framebookconfig.h  framebookconfig.ui  install.txt  ui_framebookconfig.h
